Bump patch-level CVE fixes and archive the adopt-java-25-baseline change (#891)
Pulls in Spring Boot 4.0.7, Netty 4.2.16, httpclient5/httpcore5, Tomcat
embed, and opennlp-tools patch versions ahead of what their parent BOMs
pin, to close several CVEs before the change is finalized. Archives the
completed OpenSpec change and syncs its deltas into the main specs.